Samples/Errors/UsedUndeclaredVariable.gs
//This is a G# program with errors.

print c;//c is beign used but is not declared.
f = f; //f is used before being declared.